--- a/guilded-rose-web/pom.xml
+++ b/guilded-rose-web/pom.xml
@@ -12,4 +12,11 @@
     <artifactId>guilded-rose-web</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>exercise-kk</groupId>
+            <artifactId>guilded-rose-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
