--- a/guilded-rose-web/pom.xml
+++ b/guilded-rose-web/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>Gilded-Rose-KK</artifactId>
-        <groupId>exercise-kk</groupId>
+        <artifactId>Gilded-Rose-BA</artifactId>
+        <groupId>exercise-ba</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,7 +14,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>exercise-kk</groupId>
+            <groupId>exercise-ba</groupId>
             <artifactId>guilded-rose-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
