change dao/service/controller to spring bean injected objects

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,18 @@
 
     <dependencies>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <!-- TODO: activate spring actuator for monitoring/metrics
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        -->
 
         <!-- test dependencies -->
         <dependency>
