--- a/guilded-rose-web/pom.xml
+++ b/guilded-rose-web/pom.xml
@@ -21,7 +21,18 @@
         </dependency>
 
         <!-- external -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>${spring-boot.version}</version>
+            <optional>true</optional>
+        </dependency>
 
         <!-- test -->
         <dependency>
