--- a/gilded-rose-core/pom.xml
+++ b/gilded-rose-core/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>guilded-rose-core</artifactId>
+    <artifactId>gilded-rose-core</artifactId>
 
 
 </project>
