--- a/gilded-rose-web/pom.xml
+++ b/gilded-rose-web/pom.xml
@@ -9,14 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>guilded-rose-web</artifactId>
+    <artifactId>gilded-rose-web</artifactId>
 
 
     <dependencies>
         <!-- local dependencies -->
         <dependency>
             <groupId>exercise-ba</groupId>
-            <artifactId>guilded-rose-core</artifactId>
+            <artifactId>gilded-rose-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
