--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <modules>
-        <module>guilded-rose-core</module>
-        <module>guilded-rose-web</module>
+        <module>gilded-rose-core</module>
+        <module>gilded-rose-web</module>
     </modules>
 
     <properties>
