make webapp executable

--- a/gilded-rose-web/pom.xml
+++ b/gilded-rose-web/pom.xml
@@ -53,6 +53,7 @@
                     <configuration>
                         <fork>true</fork>
                         <skip>false</skip>
+                        <executable>true</executable>
                     </configuration>
                     <executions>
                         <execution>
