add DTO/Model and its transformer for the view

--- a/gilded-rose-web/pom.xml
+++ b/gilded-rose-web/pom.xml
@@ -34,6 +34,12 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${modelmapper}</version>
+        </dependency>
+
         <!-- test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
