--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <!-- test -->
         <junit.version>4.12</junit.version>
         <mockito.version>1.9.5</mockito.version>
+        <hsqldb.version>2.4.1</hsqldb.version>
     </properties>
 
     <dependencies>
