add hsqldb as in-memory database with hibernate jspa adapter

--- a/gilded-rose-web/src/main/resources/application-prod.properties
+++ b/gilded-rose-web/src/main/resources/application-prod.properties
@@ -1,8 +1,10 @@
+# define port for this profile
+server.port=8080
+
 spring.cache.type=NONE
 error.whitelabel.enabled=false
 
-# define port for this profile
-server.port=8080
+spring.main.allow-bean-definition-overriding=true
 
 logging.level.org.springframework.web=INFO
 logging.level.com.concretepage=INFO
