--- a/gilded-rose-web/src/main/resources/application-dev.properties
+++ b/gilded-rose-web/src/main/resources/application-dev.properties
@@ -1,8 +1,10 @@
-spring.cache.type=NONE
-error.whitelabel.enabled=true
-
 # define port for this profile
 server.port=80
 
-#logging.level.org.springframework.web=INFO
-#logging.level.com.concretepage=DEBUG
+spring.cache.type=NONE
+error.whitelabel.enabled=true
+
+spring.main.allow-bean-definition-overriding=true
+
+logging.level.org.springframework.web=DEBUG
+logging.level.com.concretepage=DEBUG
