--- a/gilded-rose-core/pom.xml
+++ b/gilded-rose-core/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.3.9.Final</version>
+            <version>${hibernate.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -29,6 +29,12 @@
             <version>${hsqldb.version}</version>
             <!--<scope>test</scope>-->
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
         </dependency>
 
         <!-- test -->
@@ -41,4 +47,25 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.0.5</version>
+                <configuration>
+                    <propertyFile>${project.basedir}/src/main/resources/liquibase/liquibase.properties</propertyFile>
+                    <changeLogFile>${project.basedir}/src/main/resources/liquibase/db.changelog.master.xml</changeLogFile>
+                </configuration>
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>process-resources</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>update</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            </plugin>
+        </plugins>
+    </build>
 </project>
