--- a/gilded-rose-web/pom.xml
+++ b/gilded-rose-web/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
-            <version>${modelmapper}</version>
+            <version>${modelmapper.version}</version>
         </dependency>
 
         <dependency>
