--- a/gilded-rose-web/src/main/resources/application-dev.properties
+++ b/gilded-rose-web/src/main/resources/application-dev.properties
@@ -6,5 +6,9 @@ error.whitelabel.enabled=true
 
 spring.main.allow-bean-definition-overriding=true
 
-logging.level.org.springframework.web=DEBUG
-logging.level.com.concretepage=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.level=INFO
+logging.level.org.hibernate.SQL.level=FINER
+logging.level.org.hibernate.type.descriptor.sql.level=FINEST
+
+logging.level.com.concretepage=INFO
