--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,10 @@
 
         <!-- external -->
         <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
-        <modelmapper>2.3.2</modelmapper>
+        <modelmapper.version>2.3.2</modelmapper.version>
+        <lombok.version>1.18.6</lombok.version>
+        <hibernate.version>5.3.9.Final</hibernate.version>
+        <liquibase.version>2.0.5</liquibase.version>
 
         <!-- test -->
         <junit.version>4.12</junit.version>
@@ -36,7 +39,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.6</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
