move liquibase files to new db module

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>gilded-rose-core</module>
         <module>gilded-rose-web</module>
+        <module>gilded-rose-db</module>
     </modules>
 
     <properties>
