--- a/gilded-rose-db/pom.xml
+++ b/gilded-rose-db/pom.xml
@@ -11,12 +11,20 @@
 
     <artifactId>guilded-rose-db</artifactId>
 
+    <dependencies>
+    <dependency>
+        <groupId>org.hsqldb</groupId>
+        <artifactId>hsqldb</artifactId>
+        <version>${hsqldb.version}</version>
+    </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>3.0.5</version>
+                <version>${liquibase.version}</version>
                 <configuration>
                     <propertyFile>${project.basedir}/src/main/resources/liquibase/liquibase.properties</propertyFile>
                     <changeLogFile>${project.basedir}/src/main/resources/liquibase/db.changelog.master.xml</changeLogFile>
