--- a/gilded-rose-db/src/main/resources/liquibase/liquibase.properties
+++ b/gilded-rose-db/src/main/resources/liquibase/liquibase.properties
@@ -1,4 +1,4 @@
 driver: org.hsqldb.jdbc.JDBCDriver
-url: jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+url: jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE
 username: sa
 password: sa
