--- a/gilded-rose-web/pom.xml
+++ b/gilded-rose-web/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>spring-boot-devtools</artifactId>
             <version>${spring-boot.version}</version>
             <optional>true</optional>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.liquibase</groupId>
+                    <artifactId>liquibase-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
