--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <!-- test -->
         <junit.version>4.12</junit.version>
         <mockito.version>1.9.5</mockito.version>
-
+        <spring-security-test.version>5.1.4.RELEASE</spring-security-test.version>
         <hsqldb.version>2.4.1</hsqldb.version>
 
     </properties>
