--- a/gilded-rose-core/pom.xml
+++ b/gilded-rose-core/pom.xml
@@ -12,6 +12,14 @@
     <artifactId>gilded-rose-core</artifactId>
 
     <dependencies>
+        <!-- local dependencies -->
+        <dependency>
+            <groupId>exercise-ba</groupId>
+            <artifactId>gilded-rose-db</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <!-- external -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -23,21 +31,17 @@
             <version>${hibernate.version}</version>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>${hsqldb.version}</version>
-            <!--<scope>test</scope>-->
-            <scope>runtime</scope>
-        </dependency>
 
-        <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-            <version>${liquibase.version}</version>
-        </dependency>
 
         <!-- test -->
+        <dependency>
+            <groupId>exercise-ba</groupId>
+            <artifactId>gilded-rose-db</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
