--- a/gilded-rose-db/pom.xml
+++ b/gilded-rose-db/pom.xml
@@ -9,14 +9,26 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>guilded-rose-db</artifactId>
+    <artifactId>gilded-rose-db</artifactId>
 
     <dependencies>
-    <dependency>
-        <groupId>org.hsqldb</groupId>
-        <artifactId>hsqldb</artifactId>
-        <version>${hsqldb.version}</version>
-    </dependency>
+        <!-- local dependencies -->
+
+        <!-- external -->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
+            <!--<scope>test</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
+        </dependency>
+
+        <!-- test -->
+
     </dependencies>
 
     <build>
@@ -27,7 +39,8 @@
                 <version>${liquibase.version}</version>
                 <configuration>
                     <propertyFile>${project.basedir}/src/main/resources/liquibase/liquibase.properties</propertyFile>
-                    <changeLogFile>${project.basedir}/src/main/resources/liquibase/db.changelog.master.xml</changeLogFile>
+                    <changeLogFile>${project.basedir}/src/main/resources/liquibase/db.changelog.master.xml
+                    </changeLogFile>
                 </configuration>
                 <!--<executions>-->
                 <!--<execution>-->
@@ -38,6 +51,20 @@
                 <!--</execution>-->
                 <!--</executions>-->
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 </project>
